--- a/css/main.css
+++ b/css/main.css
@@ -110,3 +110,29 @@ main .main-input .micro-icon {
     height: 18px;
     cursor: pointer;    
 }
+
+main .main-buttons {
+    width: 530px;
+    margin: 0 auto;    
+}
+
+main .main-buttons div {
+    display: inline-block;
+}
+
+main .main-buttons button {
+    height: 36px;
+    background-color: #F2F2F2;
+    border: 1px solid #F2F2F2;
+    font-size: 14px;
+    color: #5F6368;
+    border-radius: 5px;
+    padding: 0 15px;
+    margin-right: 15px;
+}
+
+main .main-buttons button:hover {
+    border: 1px solid #C6C6C6;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+    color: #222222;
+}
