--- a/css/main.css
+++ b/css/main.css
@@ -136,3 +136,36 @@ main .main-buttons button:hover {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
     color: #222222;
 }
+
+footer {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 13px;
+    background-color: #F2F2F2;
+    border-top: 1px solid #E4E4E4;
+}
+
+footer ul {
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+}
+
+footer .footer-left {
+    justify-self: left;
+}
+
+footer .footer-right {
+    justify-self: right;
+}
+
+footer ul li a {
+    margin: 10px;
+    color: #5F6368;
+}
