cambiando el color del header

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ header nav .nav-right-section {
 
 nav .nav-right-section a {
     margin-right: 10px;
-    color: #000000;
+    color: #5F6368;
 }
 
 nav .nav-right-section .menu-icon {
